...
                }
            }
        }
    }
}

internal const val ALARM_CARD_TAG = "alarm_card"
internal const val ALARM_CARD_SUMMARY_TAG = "alarm_card_summary"
internal const val ALARM_CARD_ACTIONS_TAG = "alarm_card_actions"

@Composable
private fun ScheduleHealthText(
    textResource: Int,
    color: Color = RedErrorContent
) {
...
