...
        fontWeight = FontWeight.Bold,
        color = Color.White,
        modifier = modifier.padding(top = 16.dp, bottom = 8.dp).testTag(MAIN_HEADER_TITLE_TAG)
    )
}

internal const val MAIN_HEADER_TAG = "main_header"
internal const val MAIN_HEADER_TITLE_TAG = "main_header_title"
internal const val MAIN_HEADER_PRIVACY_TAG = "main_header_privacy"
private const val MILLIS_PER_DAY = 86_400_000L

